@startuml
class org.swe.slideshow.Controller {
- ImageView screen
- Button startButton
- Button stopButton
- Button selectDirectoryButton
- Button nextButton
- Button prevButton
- ComboBox<String> formatComboBox
- TextField delayTextField
- Label statusLabel
- Pane indicatorPane
- ConcreteAggregate slides
- Iterator iter
- Timeline timeline
- String selectedDirectory
- String selectedFormat
- int slideDelay
- Indicator progressIndicator
- Indicator timerIndicator
- Director director
- Timeline timerTimeline
- long startTime
- float maxTime
+ void initialize()
# void onSelectDirectoryClick()
# void onFormatChange()
# void onStartClick()
# void onStopClick()
# void onNextClick()
# void onPrevClick()
- void handleSlideShow(ActionEvent)
- void showNextImage()
- void createProgressIndicator(int)
- void createTimerIndicator()
- void startTimer()
- void updateTimer()
- void removeProgressIndicator()
- void removeTimerIndicator()
- void updateProgressIndicator()
- void updateIndicatorsDisplay()
- void updateStatus(String)
}


interface org.swe.slideshow.model.Iterator {
~ boolean hasNext(int)
~ Object next()
~ Object preview()
~ int getCurrentIndex()
}

interface org.swe.slideshow.model.Aggregate {
~ Iterator getIterator()
}

class org.swe.slideshow.model.BuilderIndicator {
- Indicator indicator
+ void setView(int,char,char)
- Color getColorFromChar(char)
+ void lineBounds(float,float)
+ void linePaint(float)
+ void circularPaint(float)
+ void lineMark(String)
+ void addTitle(String)
+ Indicator build()
}


class org.swe.slideshow.model.Indicator {
- VBox panel
- Rectangle progressBar
- Rectangle backgroundBar
- Arc progressArc
- Circle backgroundCircle
- Text titleText
- Text percentText
- Text fractionText
- {static} double FIXED_BAR_WIDTH
- {static} double BAR_HEIGHT
- {static} double CIRCLE_RADIUS
- {static} double CIRCLE_STROKE_WIDTH
- float startValue
- float stopValue
- float currentValue
- Color normalColor
- Color selectedColor
- Pane progressPane
- Pane circularPane
- HBox textBox
- boolean isCircular
- Text centerTimeText
+ void setCircularSize(double,double)
+ void setPaint(Color)
+ void setSelectedColor(Color)
+ void setBounds(float,float)
+ void setCurrentValue(float)
+ void setTitle(String)
+ void addTitle(String)
+ void addBoundsLine(float,float)
+ void addProgressBar(float)
- double calculateProgressWidth()
+ void addMark(String)
+ void addCircularProgress(float)
- double calculateCircularAngle()
+ void setPercentAndFraction(int,int)
- void updatePercentAndFraction(int,int)
+ void setTimeDisplay(float)
- void updateProgress()
+ void updateProgress(int,int)
+ void show(Pane)
+ VBox getPanel()
+ void setMaxWidth(double)
+ void setMaxHeight(double)
}


class org.swe.slideshow.model.ConcreteAggregate {
- String filetop
- String imageFormat
- List<File> imageFiles
+ Iterator getIterator()
- void loadImageFiles()
+ void setFiletop(String)
+ void setImageFormat(String)
+ int getImageCount()
}


class org.swe.slideshow.model.ConcreteAggregate$ImageIterator {
- int current
- Image getImage(int)
+ boolean hasNext(int)
+ Object next()
+ Object preview()
+ int getCurrentIndex()
}


class org.swe.slideshow.model.Director {
+ Indicator constructSlideShowIndicator(Builder,int)
+ Indicator constructTimeIndicator(Builder,float,float,float)
+ Indicator constructCustomIndicator(Builder,String,float,float,float,char,char)
}

interface org.swe.slideshow.model.Builder {
~ void setView(int,char,char)
~ void lineBounds(float,float)
~ void linePaint(float)
~ void circularPaint(float)
~ void lineMark(String)
~ void addTitle(String)
~ Indicator build()
}

class org.swe.slideshow.Application {
+ void start(Stage)
+ {static} void main(String[])
}



org.swe.slideshow.model.Builder <|.. org.swe.slideshow.model.BuilderIndicator
org.swe.slideshow.model.Aggregate <|.. org.swe.slideshow.model.ConcreteAggregate
org.swe.slideshow.model.ConcreteAggregate +.. org.swe.slideshow.model.ConcreteAggregate$ImageIterator
org.swe.slideshow.model.Iterator <|.. org.swe.slideshow.model.ConcreteAggregate$ImageIterator
org.swe.slideshow.Application <|-- org.swe.slideshow.Application
@enduml